--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -18,9 +18,7 @@
     --hamburger-bar-width: 20px;
     --hamburger-bar-height: 3px;
     --hamburger-gap: 3px;
-    --hamburger-height: calc(
-        (var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2)
-    );
+    --hamburger-height: calc((var(--hamburger-bar-height) * 3) + (var(--hamburger-gap) * 2));
     --rotate-start-end-amount: 134deg;
     --rotate-middle-one-amount: 50deg;
     --rotate-middle-two-amount: 220deg;
@@ -95,13 +93,15 @@ html {
 // general text color
 body {
     color: var(--gray-700);
-    font-family: Source Sans Pro;
+    font-family: Poppins;
+
     #silverBox-banner {
         display: flex;
         align-items: center;
         justify-content: center;
         margin-bottom: 35px;
         background-color: #fbfbfb;
+
         span {
             font-size: 50px;
             color: var(--primary-700);
@@ -110,6 +110,7 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
+
     // hide horizontal overflow
     body {
         overflow-x: hidden;
@@ -173,7 +174,7 @@ code {
 
                     //  the last navBar item
                     &[href="#documentationSection"] {
-                        > li {
+                        >li {
                             position: relative;
 
                             &::after {
@@ -220,8 +221,7 @@ code {
                                     border-left: 3px solid var(--white-in-white);
 
                                     &:hover {
-                                        border-left: 3px solid
-                                            var(--primary-700);
+                                        border-left: 3px solid var(--primary-700);
                                     }
                                 }
                             }
@@ -269,9 +269,10 @@ code {
             }
 
             .hamburger-menu {
+
                 &::before,
                 &::after,
-                > input {
+                >input {
                     background-color: var(--gray-400);
                 }
             }
@@ -290,7 +291,7 @@ code {
 
             &::before,
             &::after,
-            > input {
+            >input {
                 content: "";
                 width: var(--hamburger-bar-width);
                 height: var(--hamburger-bar-height);
@@ -300,7 +301,7 @@ code {
                 transition: all 500ms ease-in-out;
             }
 
-            > input {
+            >input {
                 appearance: none;
                 -webkit-appearance: none;
                 padding: 0;
@@ -421,8 +422,7 @@ code {
                             transition: 0.2s;
 
                             &.silverBox-copied {
-                                filter: grayscale(100%) sepia(100%)
-                                    hue-rotate(90deg);
+                                filter: grayscale(100%) sepia(100%) hue-rotate(90deg);
                             }
                         }
 
@@ -450,6 +450,7 @@ code {
                 }
             }
         }
+
         #documentationSection {
             .tableWrapper {
                 overflow: hidden;
@@ -485,7 +486,7 @@ code {
                     &.hide {
                         width: 0 !important;
                         height: 0 !important;
-                        border-color:transparent;
+                        border-color: transparent;
                     }
                 }
 
@@ -504,11 +505,14 @@ code {
                             transform: rotate(45deg);
                         }
                     }
+
                     &:hover {
+
                         // on button hover
                         &::after {
                             animation: confusedArrow 1.5s;
                         }
+
                         // on button hover and when it has class of "hide"
                         &.hide {
                             &::after {
@@ -518,30 +522,27 @@ code {
                                 transform: rotate(45deg);
                             }
                         }
+
                         // animations
                         @keyframes confusedArrow {
                             0% {
-                                transform: rotate(
-                                    var(--rotate-start-end-amount)
-                                );
+                                transform: rotate(var(--rotate-start-end-amount));
                             }
+
                             35% {
-                                transform: rotate(
-                                    var(--rotate-middle-one-amount)
-                                );
+                                transform: rotate(var(--rotate-middle-one-amount));
                             }
+
                             70% {
-                                transform: rotate(
-                                    var(--rotate-middle-two-amount)
-                                );
+                                transform: rotate(var(--rotate-middle-two-amount));
                             }
+
                             100% {
-                                transform: rotate(
-                                    var(--rotate-start-end-amount)
-                                );
+                                transform: rotate(var(--rotate-start-end-amount));
                             }
                         }
                     }
+
                     &::after {
                         content: "";
                         width: 6px;
@@ -572,6 +573,7 @@ code {
 
                     .document-explanation {
                         color: var(--document-explanation);
+
                         .silverBox-explanation-span {
                             padding-right: 10px;
                         }
