--- a/public/src/css/modules/_fonts.scss
+++ b/public/src/css/modules/_fonts.scss
@@ -1,35 +1,58 @@
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
+    src: url("/src/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Poppins;
     font-weight: 100;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-ExtraLight.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-Thin.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
     font-weight: 200;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-ExtraLight.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
     font-weight: 300;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-Light.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
     font-weight: 400;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
+    font-weight: 500;
+    src: url("/src/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Poppins;
+    font-weight: 600;
+    src: url("/src/fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Poppins;
     font-weight: 700;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-Bold.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: Source Sans Pro;
+    font-family: Poppins;
     font-weight: 800;
-    src: url("/src/fonts/Source_Sans_Pro/SourceSansPro-Black.ttf") format("truetype");
+    src: url("/src/fonts/Poppins/Poppins-ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Poppins;
+    font-weight: 800;
+    src: url("/src/fonts/Poppins/Poppins-Black.ttf") format("truetype");
 }
