refactor(icon): change icon margin

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -20,6 +20,11 @@
         margin: var(--silverBox-header-items-margin);
     }
 
+    .icon-wrapper {
+        margin: 0;
+    }
+
+
     .silverBox-header-title {
         color: var(--silverBox-title-color);
         font-size: var(--silverBox-title-font-size);
