style(silverBox/general): change silverBox style
needs more work

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -75,7 +75,7 @@
 
     // font sizes
     // header 
-    --silverBox-header-items-margin: 25px 0;
+    --silverBox-header-items-margin:25px;
     // title
     --silverBox-title-font-size: 24px;
     --silverBox-title-font-weight: 600;
