--- a/public/src/css/components/_buttons.scss
+++ b/public/src/css/components/_buttons.scss
@@ -1,7 +1,8 @@
 .silverBox-button-wrapper {
     display: flex;
     justify-content: space-around;
-    gap: 10px 10px;
+    gap: 10px;
+    margin-top: 25px;
 }
 
 .silverBox-button {
