refactor(silverBox): change el margins and remove first-child's margin

--- a/public/src/css/components/_cssConfig.scss
+++ b/public/src/css/components/_cssConfig.scss
@@ -73,9 +73,9 @@
         --silverBox-footer-color: #A1A4A9;
     }
 
+    // silver box
+    --silverBox-items-top-margin:25px;
     // font sizes
-    // header 
-    --silverBox-header-items-margin:25px;
     // title
     --silverBox-title-font-size: 24px;
     --silverBox-title-font-weight: 600;
