--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -47,6 +47,9 @@ body {
         background-color: var(--silverBox-background-color);
         // modal Animation
         animation: popUp 0.3s linear;
+        *:first-child{
+            margin-top: 0;
+        }
     }
 
     // popUp animation
