refactor(general): ClassName and IDs are now unique

--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -1,6 +1,6 @@
 /* centered icon */
 .silverBox-icon {
-    &.centered-icon {
+    &.silverBox-centered-icon {
         justify-self: center;
         grid-column-start: 2;
     }
