feat(footer): add top margin to footer

--- a/public/src/css/components/_footer.scss
+++ b/public/src/css/components/_footer.scss
@@ -1,4 +1,5 @@
 .silverBox-footer {
+    margin-top: var(--silverBox-items-top-margin);
     a {
         color: var(--silverBox-footer-color);
     }
