feat(silverBox/icons): add custom Class and ID key for customIcons

--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -119,7 +119,7 @@
     }
 }
 
-#silverBox-custom-icon {
+.silverBox-custom-icon {
     max-width: var(--silverBox-custom-icon-width);
     border-radius: var(--silverBox-custom-icon-border-radius);
 }
