--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -1,5 +1,6 @@
 /* centered icon */
-.silverBox-icon {
+.silverBox-icon-wrapper,
+.silverBox-icon-wrapper>*{
     &.silverBox-centered-icon {
         justify-self: center;
         grid-column-start: 2;
@@ -30,7 +31,6 @@
     }
 }
 
-
 /* info */
 .silverBox-info {
     border: 3px solid;
@@ -44,8 +44,7 @@
     font-size: 30px;
     border-color: #2e90fa;
     color: #2e90fa;
-    animation: rotate .25s;
-
+    animation: rotate 0.25s;
 }
 
 /* question */
@@ -59,11 +58,10 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    color: #A4BCFd;
-    border-color: #A4BCFd;
-    animation: rotate .25s;
+    color: #a4bcfd;
+    border-color: #a4bcfd;
+    animation: rotate 0.25s;
 }
-
 
 /* warning */
 .silverBox-warning {
@@ -78,7 +76,7 @@
     font-size: 30px;
     color: #eaaa08;
     border-color: #eaaa08;
-    animation: warning .5s;
+    animation: warning 0.5s;
 }
 
 /* x mark */
@@ -86,11 +84,11 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 3px solid #E62E05;
+    border: 3px solid #e62e05;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: error .25s;
+    animation: error 0.25s;
 
     .x {
         width: 30px;
@@ -105,7 +103,7 @@
             right: 0;
             width: 30px;
             height: 3px;
-            background-color: #E62E05;
+            background-color: #e62e05;
             border-radius: 10px;
         }
 
@@ -124,8 +122,6 @@
     border-radius: var(--silverBox-custom-icon-border-radius);
 }
 
-
-
 // animations
 @keyframes rotate {
     0% {
@@ -133,7 +129,7 @@
     }
 
     25% {
-        transform: rotate(25deg)
+        transform: rotate(25deg);
     }
 
     50% {
@@ -141,7 +137,7 @@
     }
 
     75% {
-        transform: rotate(25deg)
+        transform: rotate(25deg);
     }
 
     100% {
@@ -152,15 +148,15 @@
 // error
 @keyframes error {
     0% {
-        transform: translateX(0)
+        transform: translateX(0);
     }
 
     25% {
-        transform: translateX(5px) scale(1.05)
+        transform: translateX(5px) scale(1.05);
     }
 
     50% {
-        transform: translateX(-5px)scale(1.1)
+        transform: translateX(-5px) scale(1.1);
     }
 
     75% {
@@ -168,7 +164,7 @@
     }
 
     100% {
-        transform: translateX(0)
+        transform: translateX(0);
     }
 }
 
@@ -179,7 +175,7 @@
     }
 
     50% {
-        transform: scale(1.1)
+        transform: scale(1.1);
     }
 
     100% {
@@ -196,7 +192,7 @@
 
     25% {
         opacity: 0;
-        transform: scale(.6);
+        transform: scale(0.6);
     }
 
     50% {
@@ -206,7 +202,7 @@
 
     75% {
         opacity: 0;
-        transform: scale(.6);
+        transform: scale(0.6);
     }
 
     100% {
